# sql-bench

./: LICENSE  README.md  pyproject.toml
docs/: README.md
scripts/: __init__.py  cli.py  lint.py  query.py  schema.py  utils.py
tests/: test_query.py
