# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bench-bq"
version = "0.1.0"
description = "A minimal BigQuery utility toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "yrohitha", email = "yrohitha996@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["bigquery", "google-cloud", "cli", "utility"]
dependencies = [
    "click>=8.1.0",
    "google-cloud-bigquery>=3.0.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
    "pygments>=2.14.0",
    "difflib>=0.0.0",
    "sqlparse>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/rohithay/bench-bq"
"Bug Tracker" = "https://github.com/rohithay/bench-bq/issues"
"Source Code" = "https://github.com/rohithay/bench-bq"

[project.scripts]
bench = "bench.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["bench"]

[tool.hatch.build.targets.sdist]
include = [
    "bench",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
